Record time to navigation/tab-closed after HTTP-bad warning

This CL adds UMA metrics to record the time after displaying a
password/credit-card field on an HTTP page until the user navigates or
closes the tab.

By comparing these metrics for users who see the omnibox warning and
those who only get a console warning, we hope to get some idea of how
the HTTP-bad omnibox warning affects user behavior.

BUG=663924

Review-Url: https://codereview.chromium.org/2499243002
Cr-Commit-Position: refs/heads/master@{#433411}

Former-commit-id: 5c563b099036a96fc1e2b0ede70ec83d14012bc6